feat(Problem6): 결과 반환 기능 구현